<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayoutTopLayoutSearchScreen"
        android:isScrollContainer="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- A RecyclerView with some commonly used attributes -->
        <TextView
            android:id="@+id/textViewSearchScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/montserrat"
            android:gravity="start"
            android:text="Search"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/textViewCalendarScreenSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="120dp"
            android:paddingLeft="20dp"
            android:paddingRight="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start"
            android:text="@string/discover_new_teams_and_players"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSearchScreenTitle"
            android:layout_marginEnd="120dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="402dp"
        android:layout_height="670dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ConstraintLayoutTopLayoutSearchScreen">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SearchInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/search_screen_hint">

                <SearchView
                    android:id="@+id/SearchInputEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:queryHint="Search Here" /><!-- set query string of an search view -->

                <!--com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SearchInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" /-->

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/SearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/rounded_button"
                android:textColor="@android:color/white"
                android:text="@string/go" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/SearchResultsScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ResultsScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
            
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>