<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/TextViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/TextViewLoginSubtitle"/>


    <TextView
        android:id="@+id/TextViewLoginSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/sign_into_your_account"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/EditTextLoginEmail"/>

    <EditText
        android:id="@+id/EditTextLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_or_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto_regular"
        android:layout_above="@id/EditTextLoginPassword"
        android:background="@drawable/rounded_edittext"
        android:textSize="15sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditTextLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_edittext"
        android:textSize="15sp"
        android:autofillHints="" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayoutForSwitch"
        android:layout_below="@id/EditTextLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewLoginRecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:padding="10dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/LinearLayoutForSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="20dp" />


        <LinearLayout
            android:id="@+id/LinearLayoutForSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/TextViewLoginRecoverPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingLeft="50dp"
            android:paddingStart="50dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:layout_alignLeft="@+id/TextViewLoginRecoverPassword"
            android:layout_alignEnd="@id/TextViewLoginRecoverPassword"
            android:layout_alignRight="@id/TextViewLoginRecoverPassword"
            android:layout_alignStart="@+id/TextViewLoginRecoverPassword">
            <Switch
                android:id="@+id/SwitchRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ConstraintLayoutForSwitch"
        android:background="@drawable/rounded_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/login" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_to_register"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>