<resources>
    <string name="app_name">HuddleUp</string>
    <string name="password">"Password"</string>
    <string name="email">"Email"</string>
    <string name="email_or_username">"Email / Username"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_to_register">Swipe Left to Register</string>
    <string name="register">Register</string>
    <string name="old_username">Old Username:</string>
    <string name="new_username">New Username:</string>
    <string name="your_first_and_last_name">First and Last Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="swipe_right_for_login">Swipe Right to Login</string>
    <string name="sign_in">Sign-In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="recover_your_account_password">Recover your account password</string>
    <string name="huddleup">HuddleUp!</string>
    <string name="app_icon">App Logo</string>
    <string name="email_regex">^([a-zA-Z0-9_\\-\\.]+)@([a-zA-Z0-9_\\-\\.]+)\\.([a-zA-Z]{2,5})$</string>
    <string name="select_an_avatar">Select an icon</string>
    <string name="date">Mar 23, 2018</string>
    <string name="explore_discover_and_connect_with_teams">Explore, discover, and connect with teams</string>
    <string name="welcome">Welcome</string>
    <string name="update_info">UPDATE INFO</string>
    <string name="update_account_settings">Update Account Settings</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="my_teams">My Teams</string>
    <string name="connect">CONNECT</string>
    <string name="get_password">Get Password</string>
    <string name="change_settings_image">Change Settings Image</string>
    <string name="visit_my_profile">Visit My Profile</string>
    <string name="profile">PROFILE</string>
    <string name="set_account_settings">Set Account Settings</string>
    <string name="explore_app_features">Explore App Features</string>
    <string name="help">HELP</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile_icon">profile_icon</string>
    <string name="email_verification">Email Verification</string>
    <string name="please_verify_this_account">Please verify your account.</string>
    <string name="re_send_verification_email">RE-SEND VERIFICATION EMAIL</string>
    <string name="create_a_team">Create a team</string>
    <string name="create_a_team_and_add_players">Create a team and add players</string>
    <string name="select_a_team">Select a team</string>
    <string name="connect_with_your_teams">Connect with your teams</string>
    <string name="select_a_sport">Select a sport</string>
    <string name="next">NEXT</string>
    <string name="save_team">SAVE TEAM</string>
    <string name="team_desc">For players ages 3 and up</string>
    <string name="optional">Optional</string>
    <string name="team_sport_example">i.e. Basketball</string>
    <string name="team_name_example">i.e. Los Angeles Lakers</string>
    <string name="team_info">Team Info</string>
    <string name="team_name">Team Name</string>
    <string name="sport">Sport</string>
    <string name="coach_username">Coach Username</string>
    <string name="team_description">Team Description</string>
    <string name="date_created">Date Created</string>
    <string name="add_player">ADD PLAYER</string>
    <string name="username">Username</string>
    <string name="general_information">General Information</string>
    <string name="role">Role</string>
    <string name="save_selection">SAVE SELECTION</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_user_settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="track_all_upcoming_events">Track all upcoming events</string>
    <string name="email_label">Email:</string>
    <string name="event_info">Event Info</string>
    <string name="search_screen_hint">Search for teams / users</string>
    <string name="search">Search</string>
    <string name="describe_yourself">"Describe yourself: "</string>
    <string name="go">GO</string>
    <string name="discover_new_teams_and_players">Discover new teams and players</string>
    <string name="team">Team</string>
</resources>
